<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.fragment.bottomSheet.MealBottomSheetFragment"
    android:id="@+id/bottom_sheet_id">

    <ImageView
        android:id="@+id/img_meal_bottom_sheet"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_margin="5dp"
        android:scaleType="centerCrop"
        android:src="@drawable/mealtest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linear_bottom_sheet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_meal_bottom_sheet"
        app:layout_constraintTop_toTopOf="@+id/img_meal_bottom_sheet"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_bottom_sheet_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maroc"
            android:textColor="@color/g_black"
            android:fontFamily="@font/myfont"
            android:drawableStart="@drawable/ic_area"
            android:drawableTint="@color/black"
            android:layout_weight="1"/>

        <TextView
        android:id="@+id/tv_bottom_sheet_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/beef"
        android:textColor="@color/g_black"
        android:fontFamily="@font/myfont"
        android:drawableStart="@drawable/ic_category"
        android:drawableTint="@color/black"
        android:layout_weight="1"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_bottom_sheet_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/myfont"
        android:text="@string/couscous"
        android:layout_marginTop="10dp"
        android:textColor="@color/g_black"
        app:layout_constraintStart_toStartOf="@+id/linear_bottom_sheet"
        app:layout_constraintTop_toBottomOf="@+id/linear_bottom_sheet" />

    <TextView
        android:id="@+id/tv_bottom_sheet_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/myfont"
        android:text="@string/read_more"
        android:layout_marginTop="10dp"
        android:textColor="@color/g_black"
        app:layout_constraintStart_toStartOf="@+id/tv_bottom_sheet_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_bottom_sheet_name" />

</androidx.constraintlayout.widget.ConstraintLayout>